--- a/src/assets/css/Home.css
+++ b/src/assets/css/Home.css
@@ -41,11 +41,12 @@
     border: none;
 }
 /*header*/
+
 .box-perfil {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    margin-top: 200px;
+    margin: 5rem 0;
 }
 .names-perfil {
     display: flex;
@@ -370,12 +371,12 @@ form {
         font-size: 10px;
     }
 
-    /*section perfil*/
+    /*header*/
     .box-perfil {
         display: flex;
         flex-direction: column;
         justify-content: space-evenly;
-        margin-top: 20px;
+        margin-top: 1rem;
     }
 
     .title-name,
