--- a/src/assets/css/Home.css
+++ b/src/assets/css/Home.css
@@ -427,4 +427,10 @@ form {
     .name {
         text-align: start;
     }
+
+    /*form*/
+    .box-form {
+        width: 70%;
+        margin: 1rem auto;
+    }
 }
