--- a/src/assets/css/Home.css
+++ b/src/assets/css/Home.css
@@ -114,7 +114,7 @@ h5 {
 }
 
 .box-text {
-    margin: 5rem 0;
+    margin: 5rem;
     padding: 3rem;
     text-align: justify;
     background-color: rgba(0, 0, 0, 0.15);
@@ -206,12 +206,11 @@ h5 {
 }
 
 .btn-more {
+    font-size: 13px;
+    font-weight: 400;
     background-color: transparent;
     border-style: none;
     color: #545454;
-    font-size: 13px;
-    font-weight: 400;
-    margin: 0 0 0 0rem;
     text-decoration: underline;
 }
 
@@ -282,10 +281,8 @@ form {
 
 .box-form {
     width: 50%;
-
     margin: 3rem auto;
-
-    text-align: justify;
+    text-align: center;
     background-color: rgba(0, 0, 0, 0.15);
     border-radius: 30px;
     border: 1px solid #ff66c4;
@@ -401,6 +398,7 @@ form {
         text-shadow: 0px 1.5px 2px #272727;
         letter-spacing: 3px;
     }
+
     .btn-links {
         width: 100%;
 
@@ -417,7 +415,7 @@ form {
         padding: 4rem 1rem;
     }
     .box-text {
-        margin: 1rem;
+        margin: 3rem 1rem;
         padding: 2rem;
     }
     .title {
