--- a/src/assets/css/App.css
+++ b/src/assets/css/App.css
@@ -2,12 +2,15 @@
 :root {
     font-family: "Montserrat", sans-serif;
 }
-
+* {
+    margin: 0;
+    padding: 0;
+}
 body {
     background: #5170ff;
     background: -webkit-linear-gradient(to top, #ff66c4 #cb6ce6 #5170ff);
     background: linear-gradient(to top, #ff66c4, #cb6ce6, #5170ff);
-    min-height: 100vh;
     font-size: 15px;
     color: #545454;
+    min-height: 100vh;
 }
