--- a/src/assets/css/Home.css
+++ b/src/assets/css/Home.css
@@ -45,7 +45,6 @@
 .under-title {
     letter-spacing: 5px;
     font-size: 32px;
-    font-weight: 100;
     text-align: center;
     color: #b55fcc;
     text-shadow: 2px 2px 2px #272727;
@@ -73,7 +72,7 @@
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-gap: 10px;
-    padding: 1rem 5rem;
+    padding: 10rem 5rem 0 5rem;
 }
 
 .title {
@@ -91,7 +90,7 @@
     font-weight: 400;
     color: #ffbd59;
     text-shadow: 0px 0px 8px #ffbd59;
-    margin-bottom: 4rem;
+    margin-bottom: 1rem;
 }
 
 /*seccion sobre mi*/
@@ -100,7 +99,6 @@
     border-radius: 30px;
     text-align: justify;
     width: 100%;
-
     margin: 1rem;
     padding: 3rem;
 }
@@ -112,6 +110,7 @@
     background-color: rgba(0, 0, 0, 0.2);
     cursor: pointer;
     width: 100%;
+    margin: 3rem 0 1rem 0;
     padding: 1rem 3rem;
     border-radius: 20px;
     border: 1px solid #ff66c4;
@@ -243,7 +242,7 @@
     background-color: rgba(0, 0, 0, 0.15);
     border-radius: 30px;
     text-align: justify;
-    margin: 5rem;
+    margin: 0 6rem;
     padding: 3rem;
 }
 
