--- a/src/assets/css/Home.css
+++ b/src/assets/css/Home.css
@@ -46,8 +46,8 @@
     letter-spacing: 5px;
     font-size: 32px;
     text-align: center;
-    color: #b55fcc;
-    text-shadow: 2px 2px 2px #272727;
+    color: #d67eee;
+    text-shadow: 1px 1px 2px #272727;
     margin-top: 2rem;
 }
 
@@ -588,7 +588,7 @@
     .box-projects {
         margin: 1rem auto;
         width: 90%;
-        padding: 1rem;
+        padding: 3rem;
     }
 
     .content-projects {
