--- a/src/assets/css/Home.css
+++ b/src/assets/css/Home.css
@@ -46,8 +46,8 @@
     letter-spacing: 5px;
     font-size: 32px;
     text-align: center;
-    color: #d67eee;
-    text-shadow: 1px 1px 2px #272727;
+    color: #b574c7;
+    text-shadow: 1px 2px 2px #545454;
     margin-top: 2rem;
 }
 
@@ -262,7 +262,7 @@
 }
 .contenedor-card .box {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     align-items: center;
     position: absolute;
     top: 50%;
@@ -287,11 +287,13 @@
     box-shadow: 0px 0px 5px #545454;
     transition: border-color 0.3s, box-shadow 0.3s;
     text-align: center;
-    margin: 10px;
+    margin: 5px;
 }
 
 .box {
-    width: 250px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
 }
 
 .box-content-projects {
@@ -313,20 +315,17 @@
     border-color: #ffbd59;
     box-shadow: 0px 0px 8px #ffbd59;
 }
-
-.btn-skills {
+.btn-sites {
     display: flex;
-    flex-wrap: wrap;
-    font-size: 10px;
-    width: 280px;
+    flex-direction: row;
+    margin: auto;
 }
-.btn-skills button {
-    background-color: #545454;
+.proyect-name {
+    font-family: "Bebas Neue", sans-serif;
+    text-align: center;
     color: #ffbd59;
-    border-style: none;
-    border-radius: 5px;
-    width: 60px;
-    margin: 2px;
+    border-color: #d67eee;
+    text-shadow: 0px 0px 10px #ff66c4;
 }
 
 /*footer*/
@@ -378,7 +377,7 @@
 
     /*seccion proyectos*/
     .box-projects {
-        margin: 5rem;
+        margin: 3rem;
     }
     .box-content-projects {
         width: 350px;
@@ -468,7 +467,7 @@
     .box-cert {
         margin: 0rem auto;
         width: 90%;
-        padding: 1rem;
+        padding: 3rem 1rem;
     }
     .box-cert img {
         width: 90%;
@@ -479,7 +478,7 @@
     .box-projects {
         margin: 1rem auto;
         width: 90%;
-        padding: 1rem;
+        padding: 3rem 1rem;
     }
 
     .content-projects {
@@ -577,7 +576,7 @@
     .box-cert {
         margin: 0rem auto;
         width: 90%;
-        padding: 1rem;
+        padding: 3rem 1rem;
     }
     .box-cert img {
         width: 90%;
@@ -588,7 +587,7 @@
     .box-projects {
         margin: 1rem auto;
         width: 90%;
-        padding: 3rem;
+        padding: 3rem 1rem;
     }
 
     .content-projects {
@@ -600,5 +599,14 @@
         width: 100%;
         height: 170px;
         box-sizing: content-box;
+    }
+    .contenedor-card .box-btn {
+        height: 35px;
+        width: 70px;
+        margin: 5px;
+    }
+    .btn-sites {
+        display: flex;
+        flex-direction: row;
     }
 }
