--- a/src/assets/css/Home.css
+++ b/src/assets/css/Home.css
@@ -46,7 +46,7 @@
     letter-spacing: 5px;
     font-size: 32px;
     text-align: center;
-    color: #b574c7;
+    color: #d486ea;
     text-shadow: 1px 2px 2px #545454;
     margin-top: 2rem;
 }
@@ -76,10 +76,11 @@
 }
 
 .title {
-    font-weight: 100;
-    font-size: 30px;
-    color: #fd81ce;
-    text-shadow: 0px 0px 8px #ff66c4;
+    font-family: "Bebas Neue", sans-serif;
+    font-weight: 500;
+    font-size: 50px;
+    color: #d486ea;
+    text-shadow: 0px 0px 10px #b574c7;
     letter-spacing: 5px;
     margin-bottom: 2rem;
     text-align: justify;
@@ -185,8 +186,8 @@
 .name {
     font-size: 15px;
     font-weight: 800;
-    color: #ffbd59;
-    text-shadow: 0px 0px 8px #ffbd59;
+    color: #545454;
+    text-shadow: 0px 0px 10px #545454;
     margin-top: 2rem;
 }
 .date {
@@ -199,8 +200,8 @@
 .info {
     font-size: 15px;
     font-weight: 400;
-    color: #545454;
-    text-shadow: 0px 0px 8px rgb(92, 92, 92);
+    color: #ffbd59;
+    text-shadow: 0px 0px 8px #ffbd59;
     margin-top: 1rem;
 }
 .info-2 {
