--- a/src/assets/css/Home.css
+++ b/src/assets/css/Home.css
@@ -43,10 +43,13 @@
     }
 }
 .under-title {
+    font-family: "Bebas Neue", sans-serif;
+    font-size: 55px;
+    font-weight: 400;
     letter-spacing: 5px;
-    font-size: 32px;
     text-align: center;
     color: #d486ea;
+    border-color: #d67eee;
     text-shadow: 1px 2px 2px #545454;
     margin-top: 2rem;
 }
@@ -77,13 +80,14 @@
 
 .title {
     font-family: "Bebas Neue", sans-serif;
-    font-weight: 500;
     font-size: 50px;
-    color: #d486ea;
-    text-shadow: 0px 0px 10px #b574c7;
-    letter-spacing: 5px;
+    font-weight: 400;
+    color: #ffbd59;
+    border-color: #d67eee;
+    text-shadow: 0px 0px 10px #ff66c4;
+    border-bottom: 1.5px dotted #ffbd59;
     margin-bottom: 2rem;
-    text-align: justify;
+    text-align: start;
 }
 
 .text {
@@ -184,11 +188,13 @@
     margin: 1rem;
 }
 .name {
-    font-size: 15px;
-    font-weight: 800;
-    color: #545454;
-    text-shadow: 0px 0px 10px #545454;
     margin-top: 2rem;
+    font-family: "Bebas Neue", sans-serif;
+    font-size: 20px;
+    font-weight: 400;
+    color: #ffbd59;
+    border-color: #d67eee;
+    text-shadow: 0px 0px 10px #ff66c4;
 }
 .date {
     font-size: 14px;
