--- a/src/assets/css/Proyectos.css
+++ b/src/assets/css/Proyectos.css
@@ -12,7 +12,7 @@
     background-color: #545454;
     color: #ffbd59;
     border-style: none;
-    border-radius: 5px;
+    border-radius: 30px;
     width: 90px;
     height: 35px;
     margin: 5px;
@@ -21,7 +21,7 @@
     background-color: rgba(0, 0, 0, 0.15);
     border-radius: 30px;
     text-align: justify;
-    margin: 0 6rem;
+    margin: 1rem 6rem;
     min-height: 100vh;
     padding: 3rem;
 }
@@ -75,4 +75,40 @@
 
 .btn-home {
     text-align: end;
+    margin-top: 2rem;
+}
+
+/*RESPONSIVE*/
+@media screen and (min-width: 996px) and (max-width: 1080px) {
+    .box-proyects {
+        margin: 3rem;
+    }
+}
+@media screen and (min-width: 768px) and (max-width: 996px) {
+    .box-proyects {
+        margin: 3rem;
+    }
+}
+
+@media screen and (min-width: 280px) and (max-width: 768px) {
+    .box-proyects {
+        margin: 1rem;
+    }
+    .btn-skills {
+        justify-content: center;
+        font-size: 12px;
+    }
+    .btn-sites-projects {
+        text-align: center;
+    }
+    .btn-home {
+        margin-top: 2rem;
+        text-align: center;
+    }
+
+    .projects-views {
+        display: grid;
+        grid-template-columns: 1fr;
+        gap: 2rem;
+    }
 }
