--- a/src/assets/css/FormContact.css
+++ b/src/assets/css/FormContact.css
@@ -9,9 +9,19 @@
     margin: 1.5rem 0;
 }
 
+.text-form {
+    font-size: 15px;
+    font-weight: 400;
+    color: #ffbd59;
+    text-shadow: 0px 0px 8px #ffbd59;
+    margin-bottom: 1rem;
+    padding: 1rem 3rem;
+    text-align: justify;
+}
+
 .box-form {
     width: 50%;
-    height: 55vh;
+    min-height: 50vh;
     margin: 3rem auto;
     text-align: center;
     background-color: rgba(0, 0, 0, 0.15);
@@ -23,11 +33,22 @@
 
 .box-form iframe {
     width: 100%;
-    height: 50vh;
+    height: 40vh;
     border: none;
 }
 
 /*RESPONSIVE*/
+@media screen and (min-width: 996px) and (max-width: 1080px) {
+    .box-form {
+        min-height: 100%;
+        margin: 3rem auto;
+        width: 80%;
+    }
+    .box-form iframe {
+        width: 100%;
+        height: 60vh;
+    }
+}
 @media screen and (min-width: 768px) and (max-width: 996px) {
     .title-form {
         font-size: 30px;
@@ -35,12 +56,13 @@
     }
 
     .box-form {
-        height: 100%;
+        min-height: 100%;
         margin: 3rem auto;
         width: 80%;
     }
     .box-form iframe {
         width: 100%;
+        height: 30vh;
     }
 }
 
@@ -57,5 +79,6 @@
     }
     .box-form iframe {
         width: 100%;
+        height: 40vh;
     }
 }
