--- a/src/assets/css/Proyectos.css
+++ b/src/assets/css/Proyectos.css
@@ -52,8 +52,15 @@
     grid-template-columns: 1fr 1fr 1fr;
     gap: 2rem;
 }
-/* .projects-video {
-} */
+.projects-video {
+    display: flex;
+    justify-content: center;
+}
+
+.iframe-video {
+    width: 500px;
+    height: 315px;
+}
 .btn-sites-projects {
     margin-bottom: 2rem;
 }
@@ -110,5 +117,10 @@
         display: grid;
         grid-template-columns: 1fr;
         gap: 2rem;
+    }
+    .iframe-video {
+        width: 300px;
+        height: 215px;
+        margin: 0rem 0rem 2rem 0;
     }
 }
