--- a/src/assets/css/NotFound.css
+++ b/src/assets/css/NotFound.css
@@ -25,7 +25,7 @@
     border-style: none;
     border: 1px solid #ffbd59;
     border-radius: 10px;
-    margin: 1rem auto;
+    margin: 2rem;
     padding: 0.5rem;
     text-shadow: 0px 0px 6px #ffbd59;
     text-align: center;
