--- a/src/assets/css/FormContact.css
+++ b/src/assets/css/FormContact.css
@@ -16,7 +16,7 @@
     text-shadow: 0px 0px 8px #ffbd59;
     margin-bottom: 1rem;
     padding: 1rem 3rem;
-    text-align: justify;
+    text-align: center;
 }
 
 .box-form {
