--- a/src/assets/css/Cv.css
+++ b/src/assets/css/Cv.css
@@ -16,6 +16,7 @@
 .box-cv {
     display: flex;
     flex-direction: column;
+    margin-bottom: 3rem;
 }
 .btn-cv {
     background-color: #ffbd59;
