--- a/src/assets/css/NotFound.css
+++ b/src/assets/css/NotFound.css
@@ -25,10 +25,13 @@
     border-style: none;
     border: 1px solid #ffbd59;
     border-radius: 10px;
-    margin: 2rem;
     padding: 0.5rem;
     text-shadow: 0px 0px 6px #ffbd59;
     text-align: center;
+    transition: border-color 0.3s, box-shadow 0.3s;
+}
+.btn-404:hover {
+    box-shadow: 0px 0px 8px #ffbd59;
 }
 
 /*RESPONSIVE*/
