--- a/src/assets/css/Home.css
+++ b/src/assets/css/Home.css
@@ -568,8 +568,9 @@
     .section-btn-cv {
         background-color: #ffbd59;
         color: #545454;
-        height: 40px;
-        width: 80px;
+        height: 35px;
+        width: 100%;
+        margin: 5px;
     }
 
     /*seccion skills*/
