--- a/src/assets/css/CaruselHobbies.css
+++ b/src/assets/css/CaruselHobbies.css
@@ -10,8 +10,8 @@ h5 {
 }
 
 .custom-carousel-item img {
-    width: 350px;
-    height: 350px;
+    width: 400px;
+    height: 400px;
     border-radius: 50%;
     object-fit: cover;
     display: block;
@@ -34,8 +34,14 @@ h5 {
 }
 
 @media screen and (min-width: 280px) and (max-width: 768px) {
-    .carousel-item img {
-        width: 220px;
-        height: 220px;
+    .custom-carousel-item img {
+        width: 320px;
+        height: 320px;
+        border-radius: 50%;
+        object-fit: cover;
+        display: block;
+        margin: 0.4rem auto;
+        border: 1.5px solid #545454;
+        box-shadow: 0 0 10px #545454;
     }
 }
