--- a/src/assets/css/Cv.css
+++ b/src/assets/css/Cv.css
@@ -12,6 +12,7 @@
     display: flex;
     justify-content: space-evenly;
     align-items: center;
+    padding-top: 2rem;
 }
 .box-cv {
     display: flex;
