--- a/src/assets/css/FormContact.css
+++ b/src/assets/css/FormContact.css
@@ -3,10 +3,15 @@
     font-family: "Bebas Neue", sans-serif;
     font-size: 50px;
     font-weight: 500;
-    color: #ffbd59;
-    text-shadow: 0px 0px 6px #ffbd59;
     text-align: center;
-    margin: 1.5rem 0;
+    margin: 1.5rem auto;
+    color: #ffbd59;
+    border-color: #d67eee;
+    text-shadow: 0px 0px 10px #ff66c4;
+    border-bottom: 1.5px dotted #ffbd59;
+    margin-bottom: 2rem;
+    text-align: center;
+    width: 50%;
 }
 
 .text-form {
@@ -14,27 +19,24 @@
     font-weight: 400;
     color: #ffbd59;
     text-shadow: 0px 0px 8px #ffbd59;
-    margin-bottom: 1rem;
-    padding: 1rem 3rem;
-    text-align: center;
+    margin: auto;
+    padding: 1rem 6rem;
+    text-align: justify;
+    width: 60%;
 }
 
 .box-form {
     width: 50%;
-    min-height: 50vh;
     margin: 3rem auto;
     text-align: center;
-    background-color: rgba(0, 0, 0, 0.15);
-    border-radius: 30px;
-    border: 1px solid #ff66c4;
-    box-shadow: 0px 0px 20px #ffbd59;
     overflow: hidden;
 }
 
 .box-form iframe {
     width: 100%;
-    height: 40vh;
+    min-height: 40vh;
     border: none;
+    border-radius: 30px;
 }
 
 /*RESPONSIVE*/
@@ -48,13 +50,14 @@
         width: 100%;
         height: 60vh;
     }
+    .text-form {
+        margin: auto;
+        padding: 1rem 6rem;
+        text-align: justify;
+        width: 100%;
+    }
 }
 @media screen and (min-width: 768px) and (max-width: 996px) {
-    .title-form {
-        font-size: 30px;
-        font-weight: 500;
-    }
-
     .box-form {
         min-height: 100%;
         margin: 3rem auto;
@@ -64,14 +67,15 @@
         width: 100%;
         height: 30vh;
     }
+    .text-form {
+        margin: auto;
+        padding: 1rem 6rem;
+        text-align: justify;
+        width: 100%;
+    }
 }
 
 @media screen and (min-width: 280px) and (max-width: 768px) {
-    .title-form {
-        font-size: 30px;
-        font-weight: 500;
-    }
-
     .box-form {
         height: 100%;
         margin: 1rem auto;
@@ -80,5 +84,11 @@
     .box-form iframe {
         width: 100%;
         height: 40vh;
+    }
+    .text-form {
+        margin: auto;
+        padding: 1rem 3rem;
+        text-align: justify;
+        width: 100%;
     }
 }
