--- a/src/assets/css/Home.css
+++ b/src/assets/css/Home.css
@@ -21,12 +21,12 @@
 }
 
 .title-name {
-    height: 190px;
+    height: 200px;
 }
 .title-last-name {
     border-right: 0.8rem solid #ffbd59;
-    line-height: 0.9;
-    height: 136px;
+    line-height: 0.8;
+    height: 125px;
 }
 
 .title-last-name {
@@ -76,7 +76,7 @@
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-gap: 10px;
-    padding: 10rem 5rem 0 5rem;
+    padding: 0rem 5rem 0 5rem;
 }
 
 .title {
@@ -98,15 +98,22 @@
     text-shadow: 0px 0px 8px #ffbd59;
     margin-bottom: 1rem;
 }
+.text-hobbies {
+    width: 50%;
+    font-size: 15px;
+    font-weight: 400;
+    color: #ffbd59;
+    text-shadow: 0px 0px 8px #ffbd59;
+    margin-bottom: 1rem;
+}
 
 /*seccion sobre mi*/
 .box-about {
     /* background-color: rgba(0, 0, 0, 0.15); */
     border-radius: 30px;
     text-align: justify;
-    width: 100%;
-    margin: 1rem;
-    padding: 3rem;
+    margin: 5rem 1rem 1rem 1rem;
+    padding: 3rem 3rem 0.5rem 3rem;
 }
 
 .mui-links {
@@ -162,9 +169,19 @@
 .box-hobbies {
     /* background-color: rgba(0, 0, 0, 0.15); */
     border-radius: 30px;
-    margin: 1rem;
+    text-align: justify;
+    margin: 0 6rem;
     padding: 3rem;
     text-align: justify;
+}
+.hobbies-container {
+    display: flex;
+    align-items: center;
+    width: 100%;
+}
+
+.carusel {
+    width: 50%;
 }
 
 /*seccion skills*/
@@ -173,8 +190,7 @@
     display: flex;
     flex-direction: column;
     border-radius: 30px;
-    width: 100%;
-    margin: 1rem;
+    margin: 5rem 1rem 1rem 1rem;
     padding: 3rem;
     text-align: justify;
 }
@@ -267,11 +283,12 @@
     text-align: justify;
     margin: 0 6rem;
     padding: 3rem;
+    text-align: justify;
 }
 
 .content-projects {
     display: grid;
-    grid-template-columns: 2fr 2fr;
+    grid-template-columns: repeat(2, 2fr);
 }
 .contenedor-card {
     margin: auto;
@@ -539,12 +556,12 @@
     }
 
     .title-name {
-        height: 110px;
+        height: 120px;
     }
     .title-last-name {
-        border-right: 0.5rem solid #ffbd59;
-        line-height: 0.5;
-        height: 90px;
+        border-right: 0.4rem solid #ffbd59;
+        line-height: 0.3;
+        height: 70px;
     }
     .under-title {
         font-size: 22px;
@@ -593,6 +610,20 @@
     .box-hobbies {
         margin: 0.5rem auto;
         width: 90%;
+    }
+
+    .hobbies-container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 100%;
+    }
+
+    .carusel {
+        width: 100%;
+    }
+    .text-hobbies {
+        width: 100%;
     }
 
     /*seccion certificados*/
