--- a/src/assets/css/NotFound.css
+++ b/src/assets/css/NotFound.css
@@ -12,7 +12,8 @@
     font-size: 50px;
     font-weight: 500;
     color: #ffbd59;
-    text-shadow: 0px 0px 6px #ffbd59;
+    border-color: #d67eee;
+    text-shadow: 0px 0px 10px #ff66c4;
     text-align: center;
     margin: 1.5rem 0;
 }
@@ -23,12 +24,12 @@
     color: #ffbd59;
     background-color: transparent;
     border-style: none;
-    border: 1px solid #ffbd59;
+    border: 1.5px solid #ffbd59;
     border-radius: 10px;
     padding: 0.5rem;
-    text-shadow: 0px 0px 6px #ffbd59;
     text-align: center;
     transition: border-color 0.3s, box-shadow 0.3s;
+    min-width: 100px;
 }
 .btn-404:hover {
     box-shadow: 0px 0px 8px #ffbd59;
