--- a/src/assets/css/NotFound.css
+++ b/src/assets/css/NotFound.css
@@ -42,7 +42,8 @@
         font-size: 40px;
         font-weight: 500;
         color: #ffbd59;
-        text-shadow: 0px 0px 6px #ffbd59;
+        border-color: #d67eee;
+        text-shadow: 0px 0px 10px #ff66c4;
         text-align: center;
         margin: 1.5rem 0;
     }
