--- a/src/assets/css/Home.css
+++ b/src/assets/css/Home.css
@@ -37,8 +37,7 @@
     color: #d486ea;
     margin-top: 1.5rem;
     position: relative;
-    animation: float 3s infinite alternate;
-    transform-style: preserve-3d;
+    animation: float 2s infinite alternate;
 }
 
 .under-title span {
@@ -48,11 +47,12 @@
 @keyframes float {
     0% {
         transform: translate3d(0, 0, 0);
+        text-shadow: 0px 0px 0px #545454;
     }
 
     100% {
-        transform: translate3d(0, -10px, 10px);
-        text-shadow: 5px 10px 6px #545454;
+        transform: translate3d(0px, 5px, 0px);
+        text-shadow: 2px 5px 3px #545454;
     }
 }
 
@@ -65,7 +65,7 @@
 }
 
 .under-title span:nth-child(3) {
-    animation-delay: 1.5s;
+    animation-delay: 1s;
 }
 
 .image {
@@ -569,23 +569,23 @@
     }
 
     .names-perfil h1 {
-        font-size: 100px;
+        font-size: 80px;
         text-align: start;
         width: 100%;
         padding: 2rem;
     }
 
     .title-name {
-        height: 140px;
+        height: 110px;
     }
     .title-last-name {
         line-height: 0.3;
         height: 70px;
     }
     .under-title {
-        font-size: 30px;
+        font-size: 22px;
         letter-spacing: 3px;
-        margin-top: 2rem;
+        margin-top: 1rem;
     }
     .image {
         width: 280px;
@@ -600,7 +600,7 @@
     /*seccion sobre mi*/
     .box-about {
         margin: 1rem auto;
-        width: 90%;
+        width: 80%;
         padding: 3rem 1rem;
     }
     .section-btn-cv {
@@ -624,14 +624,14 @@
     }
     .box-studies {
         margin: 1rem auto;
-        width: 90%;
+        width: 80%;
         padding: 3rem 1rem;
     }
 
     /*seccion hobbies*/
     .box-hobbies {
         margin: 0.5rem auto;
-        width: 90%;
+        width: 80%;
         padding: 3rem 1rem;
     }
 
