--- a/src/assets/css/Home.css
+++ b/src/assets/css/Home.css
@@ -3,7 +3,7 @@
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    margin: 5rem 0;
+    margin: 5rem 3rem;
 }
 .names-perfil {
     display: flex;
@@ -15,7 +15,7 @@
     font-size: 180px;
     font-weight: 500;
     color: #ffbd59;
-    text-shadow: 0px 0px 6px #ffbd59;
+    text-shadow: 0px 0px 4px #ffbd59;
     margin: 0rem auto;
     width: 40rem;
 }
@@ -134,6 +134,7 @@
     display: flex;
     flex-direction: column;
     margin: 4rem 0 0 1rem;
+    width: 5%;
 }
 .mui-links a {
     margin-top: 3rem;
@@ -569,10 +570,10 @@
     }
 
     .names-perfil h1 {
-        font-size: 80px;
+        font-size: 75px;
         text-align: start;
         width: 100%;
-        padding: 2rem;
+        padding: 2rem 0;
     }
 
     .title-name {
@@ -583,9 +584,9 @@
         height: 70px;
     }
     .under-title {
-        font-size: 22px;
+        font-size: 20px;
         letter-spacing: 3px;
-        margin-top: 1rem;
+        margin-top: 0.5rem;
     }
     .image {
         width: 280px;
