--- a/src/assets/css/NotFound.css
+++ b/src/assets/css/NotFound.css
@@ -26,10 +26,9 @@
     border-style: none;
     border: 1.5px solid #ffbd59;
     border-radius: 10px;
-    padding: 0.5rem;
     text-align: center;
     transition: border-color 0.3s, box-shadow 0.3s;
-    min-width: 100px;
+    padding: 0.5rem 1rem 0.5rem 0.5rem;
 }
 .btn-404:hover {
     box-shadow: 0px 0px 8px #ffbd59;
